fix release workflow